# google_tasks_imgui

./: .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  PLAN-feature-parity.md  PLAN-google-keep-integration.md  PLAN-google-tasks-imgui.md  PLAN-pkce-oauth-cleanup.md  PRIVACY.md  README.md  TERMS.md  imgui.ini
.github/workflows/: release.yml
.zed/: settings.json
assets/: google-notes-app.desktop  google-tasks-imgui.desktop
docker/: centos9.Dockerfile  ubuntu2404.Dockerfile
include/: imgui_date_picker.h
site/: index.html  privacy.html  style.css  terms.html
src/: api.cpp  api.h  auth.cpp  auth.h  keep_api.cpp  keep_api.h  keep_auth.cpp  keep_auth.h  main.cpp
